public static class PlayerAnimationConstants 
{
    public const string JumpMultiplier = "JumpMultiplier";

    public const string RollMultiplier = "RollMultiplier";

    public const string IsJumping = "IsJumping";

    public const string IsRolling = "IsRolling";

    public const string StartGameTrigger = "StartGameTrigger";

    public const string Die = "Die";
}
